tests/ok/interface_basic.cz
// Test basic interface declaration and implementation

iface iMyInterface {
    fn tostring() char?
}

struct MyStruct : iMyInterface {
    i32 value
}

fn MyStruct:tostring() char? {
    return "MyStruct"
}

fn main() i32 {
    MyStruct s = MyStruct { value: 42 }
    return 0
}
